# SimplicityHL

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  function.html  index.html  introduction.html  justfile  let_statement.html  match_expression.html  print.html  program.html  run_examples.ps1  run_examples.sh  searchindex.js  searchindex.json  type.html  type_alias.html  type_casting.html  update_examples.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: check-versions.yml  cron-daily-fuzz.yml  lsp-ci.yml  publish-lsp.yml  rust.yml
bitcoind-tests/tests/common/: daemon.rs  test.rs
book/src/: introduction.md
codegen/: Cargo.toml  README.md
codegen/src/: jet.rs  main.rs
doc/: architecture.md  unstable-features.md  versioning.md
examples/: array_fold.simf  array_fold_2n.simf  cat.simf  ctv.simf  escrow_with_delay.simf  hash_loop.simf  hodl_vault.simf  htlc.simf  infix_operators.simf  last_will.inherit.wit  last_will.simf  non_interactive_fee_bump.simf  p2ms.simf  p2pk.simf  p2pkh.simf  pattern_matching.simf  presigned_vault.simf  reveal_collision.simf  reveal_fix_point.simf  sighash_all_anyonecanpay.simf  sighash_all_anyprevout.simf  sighash_all_anyprevoutanyscript.simf  sighash_none.simf  sighash_single.simf  transfer_with_timeout.simf
examples/local_crate/: main.simf  math.simf
examples/multiple_deps/: main.simf
examples/multiple_deps/math/: simple_op.simf
examples/multiple_deps/merkle/: build_root.simf
examples/simple_multidep/: main.simf
examples/simple_multidep/crypto/: hashes.simf
examples/simple_multidep/math/: arithmetic.simf
examples/single_dep/: main.simf
examples/single_dep/temp/: funcs.simf
examples/single_lib/: main.simf
external-jet-lib-example/: Cargo.toml  README.md
external-jet-lib-example/js-host/: package.json  run.mjs
external-jet-lib-example/src/: compiler_wasm.rs  jet.rs  lib.rs  main.rs
functional-tests/error-test-cases/crate-file-not-found/: main.simf
functional-tests/error-test-cases/cyclic-dependency/: main.simf
functional-tests/error-test-cases/file-not-found/: main.simf
functional-tests/error-test-cases/local-file-as-external/: main.simf  utils.simf
functional-tests/error-test-cases/name-collision/: main.simf
functional-tests/error-test-cases/private-visibility/: main.simf
functional-tests/error-test-cases/type-alias-duplication/: main.simf
functional-tests/valid-test-cases/deep-reexport-chain/: main.simf
functional-tests/valid-test-cases/diamond-dependency-resolution/: main.simf
fuzz/: Cargo.toml  fuzz-util.sh  generate-files.sh
fuzz/fuzz_targets/: compile_parse_tree.rs  compile_text.rs  display_parse_tree.rs  parse_witness_json_rtt.rs
lsp/: Cargo.toml
lsp/src/: backend.rs
macros/: Cargo.toml
macros/examples/: main_example.rs  test_roundtrip.rs
macros/src/: codegen.rs  lib.rs  parse.rs
macros/src/codegen/: mod.rs  types.rs
src/: ast.rs  compile.rs  contract_id.rs  debug.rs  driver.rs  error.rs  intern.rs  jet.rs  lexer.rs  lib.rs  main.rs  named.rs  num.rs  parse.rs  pattern.rs  resolution.rs  serde.rs  source.rs  str.rs  test_utils.rs  tracker.rs  type_cache.rs  types.rs  unstable.rs  unstable_flags.rs  value.rs  version.rs  warning.rs  witness.rs
src/compile/: error.rs  mod.rs
src/docs/: jet.rs
src/driver/: error.rs  linearization.rs  mod.rs  resolve_order.rs  tests.rs  version_tests.rs
src/jet/: core.rs  elements.rs  external.rs  mod.rs
src/parse/: test.rs
test-data/: last_will.json
tests/: cli.rs  core_tracker.rs  warnings.rs
vscode/: README.md  package.json
vscode/syntaxes/: simplicityhl.tmLanguage.json
(+44 files in other folders)
