[package]
name = "simplicityhl-lsp"
version = "0.1.3"
edition = "2024"
rust-version = "1.87"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.143"
tower-lsp-server = "0.22.1"

ropey = "1.6.1"
miniscript = "12"
simplicityhl = { path = ".." }

env_logger = "0.11.8"
thiserror = "2.0.17"

[lints.rust]
unsafe_code = "deny"
unused_variables = "warn"
dead_code = "warn"
unreachable_code = "warn"
unused_mut = "warn"

[lints.clippy]
pedantic = "warn"
