[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = [] }
proc-macro-error = { version = "1.0" }
syn = { version = "2.0.114", features = ["full"] }
quote = { version = "1" }


simplicityhl = { path = "../" }