[package]
name = "simplicityhl-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-error = { version = "1.0" }
syn = { version = "2.0.114", features = ["full"] }
quote = { version = "1" }
bincode = { version = "2.0.1" }
serde = { version = "1.0.228" }


simplicityhl = { path = "../" }
simplicityhl-core = { path = "../../simplicity-contracts-copy/crates/simplicityhl-core" }